Lab4/Code/syntax.output
Terminals unused in grammar

   UNDEF


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT Tag
   14                | STRUCT OptTag LC DefList RC
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp error SEMI

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier DecList error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp LB error RB

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 15 21 24 29 38 42 65
INT (258) 20 63
FLOAT (259) 64
ID (260) 16 18 19 22 23 24 58 59 61 62
SEMI (261) 4 5 7 8 32 34 38 41 42
COMMA (262) 10 25 44 66
ASSIGNOP (263) 46 47
RELOP (264) 50
PLUS (265) 51
MINUS (266) 52 56
STAR (267) 53
DIV (268) 54
AND (269) 48
OR (270) 49
DOT (271) 61
NOT (272) 57
LP (273) 22 23 35 36 37 55 58 59
RP (274) 22 23 24 35 36 37 55 58 59
LB (275) 20 21 60 65
RB (276) 20 60 65
LC (277) 14 15 28 29
RC (278) 14 15 28 29
STRUCT (279) 13 14 15
RETURN (280) 34
IF (281) 35 36
ELSE (282) 36
WHILE (283) 37
UNDEF (284)
TYPE (285) 11
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 27 41 42
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 14 15
Tag (40)
    on left: 18, on right: 13
VarDec (41)
    on left: 19 20 21, on right: 9 10 20 21 27 45 46
FunDec (42)
    on left: 22 23 24, on right: 6 7
VarList (43)
    on left: 25 26, on right: 22 25
ParamDec (44)
    on left: 27, on right: 25 26
CompSt (45)
    on left: 28 29, on right: 6 33
StmtList (46)
    on left: 30 31, on right: 28 30
Stmt (47)
    on left: 32 33 34 35 36 37 38, on right: 30 35 36 37
DefList (48)
    on left: 39 40, on right: 14 28 39
Def (49)
    on left: 41 42, on right: 39
DecList (50)
    on left: 43 44, on right: 41 42 44
Dec (51)
    on left: 45 46, on right: 43 44
Exp (52)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 32 34 35 36 37 38 46 47 48 49 50 51 52 53 54 55 56
    57 60 61 65 66 67
Args (53)
    on left: 66 67, on right: 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 StructSpecifier: STRUCT . Tag
   14                | STRUCT . OptTag LC DefList RC
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 19 (VarDec)
    COMMA  reduce using rule 19 (VarDec)
    LB     reduce using rule 19 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 26
    LC    shift, and go to state 27

    CompSt  go to state 28


State 20

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 29
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 21

   24 FunDec: ID error . RP

    RP  shift, and go to state 33


State 22

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    RP      shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 18


State 25

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

   28 CompSt: LC . DefList StmtList RC
   29       | LC . error RC

    error   shift, and go to state 42
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 44


State 30

   41 Def: Specifier . DecList SEMI
   42    | Specifier . DecList error SEMI

    ID  shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 31

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 32

   39 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 32


State 33

   24 FunDec: ID error RP .

    $default  reduce using rule 24 (FunDec)


State 34

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 35

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 50


State 36

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 37

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 26 (VarList)


State 38

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   21 VarDec: VarDec LB error .

    $default  reduce using rule 21 (VarDec)


State 41

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 42

   29 CompSt: LC error . RC

    RC  shift, and go to state 54


State 43

   28 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 27
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 44

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 45

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 25

    $default  reduce using rule 45 (Dec)


State 46

   41 Def: Specifier DecList . SEMI
   42    | Specifier DecList . error SEMI

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 47

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 43 (DecList)


State 48

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 49

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 50

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 27 (ParamDec)


State 51

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 52

   25 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 37


State 53

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 54

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 55

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 56

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 57

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 62 (Exp)


State 58

   56 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 74


State 59

   57 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 75


State 60

   55 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


State 61

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


State 62

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 63

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 64

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 65

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 66

   30 StmtList: Stmt . StmtList

    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 27
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 81
    Stmt      go to state 66
    Exp       go to state 67


State 67

   32 Stmt: Exp . SEMI
   38     | Exp . error SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    error     shift, and go to state 82
    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 68

   46 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 94


State 69

   42 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 95


State 70

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 96
    Dec      go to state 47


State 72

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 73

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 97

    Exp   go to state 98
    Args  go to state 99


State 74

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 56 (Exp)


State 75

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 57 (Exp)


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 100
    LB        shift, and go to state 93


State 77

   34 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    SEMI      shift, and go to state 101
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 78

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 102


State 79

   37 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 103


State 80

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 81

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 82

   38 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 104


State 83

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 84

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 105


State 85

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 106


State 86

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 107


State 87

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 108


State 88

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 109


State 89

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 110


State 90

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 111


State 91

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 112


State 92

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 113


State 93

   60 Exp: Exp LB . Exp RB
   65    | Exp LB . error RB

    error  shift, and go to state 114
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 115


State 94

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 46 (Dec)


State 95

   42 Def: Specifier DecList error SEMI .

    $default  reduce using rule 42 (Def)


State 96

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 97

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 98

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 116
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 67 (Args)


State 99

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 117


State 100

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 101

   34 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 102

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 118
    LB        shift, and go to state 93


State 103

   37 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 119
    LB        shift, and go to state 93


State 104

   38 Stmt: Exp error SEMI .

    $default  reduce using rule 38 (Stmt)


State 105

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 47 (Exp)


State 106

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   50    | Exp RELOP Exp .
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    STAR   shift, and go to state 88
    DIV    shift, and go to state 89
    DOT    shift, and go to state 92
    LB     shift, and go to state 93

    $default  reduce using rule 50 (Exp)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 51 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 52 (Exp)


State 109

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   53    | Exp STAR Exp .
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 53 (Exp)


State 110

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   54    | Exp DIV Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 54 (Exp)


State 111

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   48    | Exp AND Exp .
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB
